
Version 1.4.5 (07/12/2006) "Blobby"
  * Upgraded the editor to use Engine Beta 8.1
  * The editor has been upgraded to now use Jgraph 5.9.2.1.
  * Now, when a user selects a single task, the palette menu expands to allow the use to modify the
    split and join decorators for the task, without having to go to the popup menu for the task.
  * Fixed a bug where a graph that was scaled would stop the user from being able to draw flows between elements.
  * Now, on the label Element dialog, hitting enter in the label field will do the same as pressing the done button. 
    This is a user convenience for quickly making label changes.
  * The upgrade to 5.9.2 of JGraph broke certain cut and paste behaviour.  This is now fixed to work with the 
    latest JGraph.
  * Altered how text is positioned with respect to the graphs upon export to PNG, JPG and print jobs.  The text
    should now appear above the graph without writing over the top of it.
  * Save files are now saved to a temporary file first and then copied to the final specified file name. If there is
    an editor crash whilst saving, only the temporary file will be corrupted.
  * Fixed a bug where saving a specification with a task that has a single flow coming into or going out of it, then
    reloading the specification ses the user unable to add a decorator for that flow.
  * Fixed a bug where right-clicking on the knee of a flow would see the pallet popup menu appear whenever the redrawn
    flow no longer lay underneath the mouse after knee removal.
  * Fixed a bug where cells could be be moved beyond the left or top edge of a net if movement was done with the keyboard.
  * Fixed a bug where on print/export of a net, if the secification/net identification string was longer than the 
    net width, the string would be truncated to the net width.
  * When users now create a net from the "Unfold to Net..." popup menu item, they will receive the net decomposition dialog, 